Page titles update

--- a/modules/admin/view/layouts/basic.phtml
+++ b/modules/admin/view/layouts/basic.phtml
@@ -15,7 +15,7 @@
         <script type="text/javascript" src="/public/js/plugins/jquery-1.11.1.min.js"></script>
         <script type="text/javascript" src="/public/js/plugins/jquery-ui-1.10.4.custom.min.js"></script>
 
-        <title>TJ Sokol - Administrace</title>
+        <title>{echo $title}</title>
     </head>
     <body lang="cs">
         <div class="header radius3">
