--- a/modules/admin/view/email/add.phtml
+++ b/modules/admin/view/email/add.phtml
@@ -24,7 +24,7 @@
                 </span>
             </p>
             <p>
-                <label>Předmět</label>
+                <label>Předmět*</label>
                 <span class="field">
                     {echo \Admin\Helper\FormPrinter::input('text', 'subject', array($template,'subject'), array('required'=>true))}
                     {if isset($errors["subject"])}
