Preparations for development - ajax responses

--- a/modules/admin/view/content/add.phtml
+++ b/modules/admin/view/content/add.phtml
@@ -79,4 +79,4 @@
 </div>
 <br class="clear-all"/>
 <div id="insert-dialog"><p></p></div>
-<script type="text/javascript" src="/public/js/custom/build/news.js"></script>
+<script type="text/javascript" src="/public/js/custom/news.js"></script>
