--- a/modules/admin/view/news/edit.phtml
+++ b/modules/admin/view/news/edit.phtml
@@ -173,5 +173,5 @@
 </div>
 <br class="clear-all"/>
 <div id="insert-photo-dialog"><p></p></div>
-<script type="text/javascript" src="/public/js/custom/build/news.js"></script>
+<script type="text/javascript" src="/public/js/custom/news.js"></script>
 {/if}
