--- a/modules/admin/view/action/edit.phtml
+++ b/modules/admin/view/action/edit.phtml
@@ -304,5 +304,5 @@
 </div>
 <br class="clear-all"/>
 <div id="insert-dialog"><p></p></div>
-<script type="text/javascript" src="/public/js/custom/build/news.js"></script>
+<script type="text/javascript" src="/public/js/custom/news.js"></script>
 {/if}
